# MineFramwork

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  build_output.txt  check_hlsl_size.ps1  debug_output.txt  out2.txt  xmake.lua
.github/: copilot-instructions.md
.github/instructions/: git-commit.instructions.md
.github/skills/logging-conventions/: SKILL.md
.github/skills/standard-task-flow/: SKILL.md
benchmarks/: README.md
cmake/: MineCompilerFlags.cmake  MineDependencies.cmake  MineFrameworkConfig.cmake.in  MineModule.cmake  MineOptions.cmake
docs/: 00-overview.md  01-architecture.md  02-modules.md  03-mml-language.md  04-precompiler.md  05-rendering.md  06-composition.md  07-windowing.md  08-input.md  09-property-binding.md  10-mvvm.md  11-di-ioc.md  12-data-sqlite.md  13-network.md  14-toolchain.md  15-build-xmake.md  16-sdk-packaging.md  17-repo-layout.md  18-coding-conventions.md  19-roadmap.md  20-style-template.md  21-control-authoring.md  21-controls-architecture.md  21-core-api.md  22-appearance-architecture.md  23-io-module.md  24-controls-architecture-redesign.md  CMAKE_BUILD.md  README.md  development-plan.md
docs/api/: 01-core.md  02-containers.md  03-math.md  04-property.md  05-event.md  06-animation.md  07-style.md  08-visual.md  09-input.md
docs/api/async/: 00-Async.md  01-Future-Promise.md  02-Task.md  03-Dispatcher.md  04-ThreadPool.md  05-Timer.md
docs/api/containers/: 01-Vector.md  02-HashMap.md  03-SmallVector.md  04-IntrusiveList.md  05-InlineString.md  06-Hash.md  07-Containers.md  08-Api.md  09-ModuleTag.md
docs/api/core/: 01-TypeId.md  02-StringView.md  02-Variant.md  03-Span.md  03-StringView.md  04-Memory.md  04-Status-Result.md  05-Memory.md  05-Span.md  06-Function.md  06-Result.md  07-Function.md  07-Variant.md  08-Status.md  08-Utilities.md  09-Allocator.md  10-Assert.md  11-Pimpl.md  12-Core.md  13-Api.md  14-ModuleTag.md  README.md
docs/api/gfx/: 01-GfxTypes.md  02-IBuffer-ITexture.md  03-ICommandList.md  04-IQueue-IFence.md  05-IPipeline.md  06-ISwapchain.md  07-IDevice-GfxHost.md  08-Gfx-Api.md
docs/api/io/: 01-Path.md  02-File.md  03-FileSystem.md  04-MemMap.md  05-PipeStream.md  06-Io.md
docs/api/math/: 01-Vec2.md  02-Vec3.md  03-Vec4.md  04-Point.md  05-Size.md  06-Thickness.md  07-Rect.md  08-Color.md  09-CornerRadii.md  10-RoundedRect.md  11-ComplexRoundedRect.md  12-Mat3.md  13-Mat4.md  14-Transform2D.md  15-Common.md  16-Math.md  17-Api.md  18-ModuleTag.md
docs/api/paint/: 01-Pen-Brush.md  02-Path-PathBuilder.md  03-Canvas.md  04-DrawCmd-DisplayList.md  05-IRenderer.md  06-Paint-PaintFwd.md
docs/api/platform/: 01-WindowState.md  02-WindowKind.md  03-WindowCornerPreference.md  04-NativeHandle.md  05-WindowDesc.md  06-WindowChromeDesc.md  07-WindowEvent.md  08-ScreenInfo.md  09-IWindowEventSink.md  10-IWindowEventSource.md  11-IWindow.md  12-IScreenManager.md  13-IClipboard.md  14-IMEService.md  15-IApplicationHost.md  16-PlatformHost.md  17-PlatformAbi.md  18-Api.md  19-ModuleTag.md
docs/api/reflect/: 01-TypeInfo.md  02-PropertyInfo.md  03-MethodInfo.md  04-TypeRegistry.md  05-ReflectMacros.md  06-Reflect.md
docs/api/text/: 01-Utf8.md  02-FontFace.md  03-TextLayout.md  04-ModuleTag.md
docs/api/ui.animation/: 01-Duration.md  02-EasingFunction.md  03-SpringEasing.md  04-AnimationClock.md  05-PropertyAnimation.md  06-Storyboard.md  07-ModuleMetadata.md
docs/api/ui.app/: 01-Application.md  02-ApplicationMain.md  03-ModuleMetadata.md
docs/api/ui.binding/: 01-BindingMode.md  02-IConverter.md  03-INotifyPropertyChanged.md  04-PropertyDependency.md  05-BindingConfig.md  06-BindingExpression.md  07-ModuleTag-Api-Binding.md
docs/api/ui.controls/: 01-ContentControl.md  02-ContentPresenter.md  03-Border.md  04-TextBlock.md  05-TextBox.md  06-Button.md  07-CheckBox.md  08-Page.md  09-UserControl.md  10-ModuleMetadata.md
docs/api/ui.event/: 01-RoutingStrategy.md  02-RoutedEventArgs.md  03-IRoutedEventTarget.md  04-RoutedEvent.md  05-EventManager.md  06-ICommand.md  07-RelayCommand.md  08-MetaFiles.md
docs/api/ui.input/: 01-Key.md  02-ModifierKeys.md  03-MouseButton.md  04-KeyEventArgs.md  05-MouseEventArgs.md  06-TextInputEventArgs.md  07-InputEvents.md  08-InputRouter.md  09-ModuleMetadata.md
docs/api/ui.layout/: 01-Orientation.md  02-GridLength.md  03-Panel.md  04-StackPanel.md  (+2 more)
modules/: README.md  mineui.lua
samples/: README.md
samples/00-blank-window/: CMakeLists.txt  main.cpp  xmake.lua
samples/00-hello-rect/: CMakeLists.txt  README.md  main.cpp  xmake.lua
samples/01-mvvm-binding/: CMakeLists.txt  CounterViewModel.h  CounterWindow.cpp  CounterWindow.h  main.cpp  xmake.lua
samples/01-vsm-animation/: main.cpp  xmake.lua
samples/02-controls-demo/: CMakeLists.txt  DemoWindow.cpp  DemoWindow.g.cpp  DemoWindow.g.h  DemoWindow.h  main.cpp  xmake.lua
samples/03-custom-chrome/: CMakeLists.txt  CustomChromeWindow.cpp  CustomChromeWindow.h  main.cpp  xmake.lua
scripts/: bootstrap.ps1  bootstrap.sh  build-all.lua  build_shaders.ps1  clone-deps-from-mirror.ps1  deps.json  download_deps.ps1  extract_hlsl.ps1  fmt.ps1  gen-docs.lua  lint.ps1  pack-sdk.lua  release.lua
src/mine/platform/win32/: CMakeLists.txt  xmake.lua
src/mine/platform/win32/api/include/mine/platform/win32/: Api.h  Win32ApplicationHost.h
src/mine/platform/win32/src/: Win32ApplicationHost.cpp  Win32ApplicationHostImpl.h  Win32Clipboard.cpp  Win32Clipboard.h  Win32Helpers.h  Win32IMEService.cpp  Win32IMEService.h  Win32ScreenManager.cpp  Win32ScreenManager.h  Win32Window.cpp  Win32Window.h  Win32WindowClass.cpp  Win32WindowClass.h  Win32WindowEventSource.h
tests/: README.md
tests/binding/: README.md
tests/end_to_end/: README.md
tests/ui-render/: README.md
tools/: README.md
tools/ext.vscode/: README.md  package.json
tools/mineinst/: README.md
tools/minepack/: README.md
tools/mmlc/: README.md
tools/mmlfmt/: README.md
tools/mmlls/: README.md
tools/shadercc/: README.md
xmake/: options.lua  toolchains.lua
xmake/rules/: mine_module.lua  mml_compile.lua  pkg_export.lua
(+503 files in other folders)
